testdata/invalid/invalid_enum_duplicate_index.bop
enum MyEnum {
    A = 1;
    B = 1;
}
